# Advent-of-Code-2022

./: .gitignore
day1/: day1.ipynb  day1.md
day2/: day2.ipynb
day3/: CMakeLists.txt  day3.md  main.cpp
day3/.cache/clangd/index/: main.cpp.ADD8198176EC6207.idx
day3/includes/: Util.h
